# shadow

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
docs/: dependencies.md  references.md
include/3d/: App.hpp
include/shadow/: App.hpp  Camera.hpp  Console.hpp  ResourcePack.hpp  Scene.hpp
res/: basic.frag  basic.vert  blue.frag  blue.vert  debug.frag  debug.vert  depthmap.vert  green.frag  green.vert  shadowpcf.frag  standard.frag  standard.vert
src/: App.cpp  CMakeLists.txt  Camera.cpp  Console.cpp  ResourcePack.cpp  Scene.cpp  main.cpp
test/: CMakeLists.txt
